add height to logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <body>
     <script src="./smk-init.js"></script>
         <div id="header">
-            <img src="assets/bc-gov-logo-transparent.png">
+            <img src="assets/bc-gov-logo-transparent.png" height="85">
             <div id="header-title">BC French Language Services Map</div>
         </div>
         <div id="smk-map-frame"></div>
