- update smk to 1.0.4 - disable pointer events on legend - use local smk from node_modules - make http-server a devDependency in package.json - set initial extent and zoom to match smk-fap-fcb app - remove schools query from menu - edit explanation about clusters in 'About the Map' - Early Childhood Care pin is now green in the 'What will I find on the map panel?' to match smk-fap-fcb site - Fixed bad characters that displayed as a black diamond with a questions mark - Updated hyperlinks that pointed to old dmf site to point to the new production site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BC French Language Services Map</title>
         <!-- SMK BOOTSTRAP - - - - - - - -->
-        <script src="./node_modules/smk/dist/smk.js"></script>
+        <script src="./node_modules/@bcgov/smk/dist/smk.js"></script>
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
         <!-- - - - - - - - - - - - - - - -->
         <style>
